--- a/docs/p/6463.md
+++ b/docs/p/6463.md
@@ -35,7 +35,7 @@ wiki: https://clashofclans.fandom.com/wiki/Multiplayer_Battles
 ## 战斗前的准备时间
 
 - 当对方的村庄出现在你的视线中时，你会有 30 秒的准备时间。
-  - 国服由于 [场景](/p/2010) 动画的存在，准备时间有所不同，不过这个网站不考虑国服，本文不讲解这方面。
+  - 部分 [场景](/p/2010) 存在展示动画，准备时间有所不同，本文不详细讲解。
 - 如果你在准备时间未结束的时候部署部队，则战斗立刻开始，也就是说提前开始不能获得额外的战斗时间。
 - 进攻这个基地可以获得的资源和奖杯数量已显示到屏幕左上角，如果你不想打这个基地，可以花费少量金币搜索下一个基地。
 
@@ -153,7 +153,7 @@ wiki: https://clashofclans.fandom.com/wiki/Multiplayer_Battles
 
 ## 掠夺机制
 
-见这篇文章：[月卡给了 2500 万，我的资源会被抢很多吗？论打资源时的掠夺比例](/p/639)。
+见这篇文章：[月卡给了 3000 万，我的资源会被抢很多吗？论打资源时的掠夺比例](/p/639)。
 
 ## 进攻和防守日志
 
