--- a/docs/p/2053.md
+++ b/docs/p/2053.md
@@ -11,6 +11,7 @@ tags: castle-troops
 ---
 
 <PostHistory>
+2024-09-18 修订：攻城机器等级数据修复。<br>
 2024-09-11 修订：根据 2024 年 9 月更新修改文章内容（但一图流总结内容太多，懒得改）。<br>
 2024-04-28 修订：翻新这篇文章的内容和图片。
 </PostHistory>
@@ -110,19 +111,19 @@ tags: castle-troops
 
 <Table maxWidth="500px">
 
-| 大本等级   | 10 本 | 11 本 | 12 本 | 13 本 | 14 本及以上 |
+| 大本等级   | 10 本 | 11 本 | 12 本 | 13 本 | 14 本 |
 |   :--     |  ---  |  ---  |  ---  |  ---  |    ---    |
 | 攻城战车   |   2   |   3   |   4   |   5   |     5     |
-| 攻城飞艇   |   2   |   3   |   4   |   5   |     5     |
+| 攻城飞艇   |   2   |   3   |   4   |   4   |     4     |
 | 攻城气球   |   2   |   3   |   4   |   5   |     5     |
-| 攻城训练营 |   \   |   2   |   3   |   4   |     4     |
-| 攻城滚木车 |   \   |   2   |   3   |   4   |     4     |
-| 攻城烈焰车 |   \   |   \   |   2   |   3   |     3     |
-| 攻城钻机   |   \   |   \   |   \   |   \   |     2     |
+| 攻城训练营 |   \   |   2   |   3   |   4   |     5     |
+| 攻城滚木车 |   \   |   2   |   3   |   4   |     5     |
+| 攻城烈焰车 |   \   |   \   |   2   |   3   |     4     |
+| 攻城钻机   |   \   |   \   |   \   |   2   |     3     |
 
 </Table>
-
-按照这个表，即使是 16 本也没办法要到满级攻城滚木车和攻城钻机，看起来有些诡异，但官方确实是这么写的，链接：[September Update Balance Changes Breakdown | Reddit](https://www.reddit.com/r/ClashOfClans/comments/1f2daw4/september_update_balance_changes_breakdown/)。
+链接：[September Update Balance Changes Breakdown | Reddit](https://www.reddit.com/r/ClashOfClans/comments/1f2daw4/september_update_balance_changes_breakdown/)。
+修正后的图：[工程武器等级修正 | Reddit](https://preview.redd.it/september-update-balance-changes-breakdown-v0-3wtbevcyq6ld1.jpeg?width=2500&format=pjpg&auto=webp&s=a3d9870a203f604811d574df53b2b320b2ea59aa)。
 
 ## 一图流总结
 
